[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/satlas2/_version.py"
local_scheme = "no-local-version"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/myproject/_version.py"
versionfile_build = "myproject/_version.py"
tag_prefix = ""
parentdir_prefix = "myproject-"