[metadata]
name = satlas2
version = 0.0.1
author = Wouter Gins
author_email = wouter.a.gins@jyu.fi
description = Fitting package aimed at laser spectroscopy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
